--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,15 +1,15 @@
-.menu-nav {
-  background-color: darkblue;
-}
+/* .menu-nav {
+    background-color: darkblue;
+} */
 
 .menu-ul {
   display: flex;
   justify-content: right;
-  background-color: #005670;
+  background-color: rgba(0, 60, 128, 0.466);
 }
 
 .menu-list {
-  background-color: rgba(0, 0, 0, 0.171);
+  background-color: rgba(255, 255, 255, 0.205);
   padding: 5px 10px;
   margin: 10px;
   list-style: none;
